[package]
name = "loxp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.40", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
mlua = { version = "0.10", features = ["lua54", "macros", "send", "vendored", "anyhow", "serialize"] }
